# mzmlwatcher

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: print_summary.rs  queries.sql
src/: cli.rs  config.rs  db.rs  error.rs  export.rs  fs.rs  lib.rs  main.rs  model.rs  parser.rs  watch.rs
tests/: integration_cli.rs
tests/common/: mod.rs
tests/fixtures/: minimal.mzML
