[package]
name = "mzmlwatcher"
version = "0.1.3"
edition = "2024"
description = "Watch mzML files, extract header metadata, and persist it to SQLite and TSV."
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
hex = "0.4"
mzdata = "0.63"
notify = "8.2"
quick-xml = "0.38"
rayon = "1.10"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
